--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am learning to code with GT coding bootcamp</p>
+      <p>I am learning to code with GT coding bootcamp.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Atlanta, GA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy hiking, movies, and video games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to become a web developer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Oakhurst in east Atlanta.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because I want to be challenged while using my creativity to create intricate and interesting websites.</p>
     </section>
 
     <footer id="footer">
