--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>What's your dream job?</h1>
       <p>My dream job is to become a web developer.</p>
       <h1>Where do you live?</h1>
-      <p>I currently live in Oakhurst in east Atlanta.</p>
+      <p>I currently live in Oakhurst in East Atlanta.</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>I want to be a web developer because I want to be challenged while using my creativity to create intricate and interesting websites.</p>
     </section>
